# ASCR

./: .env.template  .gitignore  AGENTS.md  ASCR_Paper_Blueprint_EN.docx  ASCR_Workflow_Playbook_EN.docx  README.md  do_update.py  pyproject.toml  requirements-qwen-vl.txt  scripts_temp_update_docs.py  setup.py
.github/workflows/: ci.yml
ascr/core/: loop.py  (+6 more)
configs/: cluster_gpu.yaml  cluster_gpu_shared.yaml  showo_local_512x512.yaml  stage1_mmada8b_qwen9b_coarse.yaml  stage1_mmada8b_qwen9b_coarse_hq.yaml  stage1_mmada8b_self_direct_token.yaml  stage1_showo_local.yaml  stage1_showo_qwen35_9b.yaml  stage1_showo_qwen35_9b_coarse_b256.yaml  stage1_showo_qwen35_9b_coarse_b512.yaml  stage1_showo_qwen35_9b_coarse_b64.yaml  stage1_showo_qwen35_9b_direct_token.yaml  stage1_showo_qwen35_9b_direct_token_b256.yaml  stage1_showo_qwen35_9b_direct_token_b512.yaml  stage1_showo_qwen35_9b_direct_token_b64.yaml  stage1_showo_qwen35_9b_direct_token_uncapped.yaml  stage1_showo_qwen35_9b_fullcap_parallel.yaml  stage1_showo_qwen36.yaml  stage1_showo_qwen36_complex.yaml
data/: README.md
docs/: AI_COLLAB_LOG.md  API_TEACHER_DISTILL.md  GIT_SYNC.md  H200_FAST_PATH.md  LOCAL_SETUP.md  LUMINA_NATIVE_DISTILLATION.md  REMOTE_RUN.md  SERVER_AI_HANDOFF.md  SERVER_AI_TASK_LUMINA_LORA_JSON_V2.md  SERVER_AI_TASK_LUMINA_LORA_JSON_V3_DATA_EXPANSION.md  SERVER_AI_TASK_LUMINA_NATIVE_JSON_SFT.md  SERVER_AI_TASK_STAGE3_SELF_CORRUPT_DATASET.md  SERVER_AI_TASK_STAGE3_SELF_CORRUPT_LOCALITY.md  SERVER_AI_TASK_STAGE3_SELF_CORRUPT_SELECTORS.md  SERVER_AI_TASK_STAGE3_TOKEN_REPAIR_DATASET_AND_LORA.md  SERVER_AI_TASK_STAGE4_HIDDEN_REPAIR_HEAD.md  SERVER_AI_TASK_STAGE4_MMU_LORA.md  SERVER_AI_TASK_STAGE5_6_INFRA_SCRIPTS.md  STAGE3_SELF_CORRUPTED_TOKEN_REPAIR.md  STAGE4_PROMPT_SCALING_GUIDE.md  STUDENT_LOCALIZER_IMAGE_BENCHMARK.md  WINDOWS_CODEX_HANDOFF_STAGE3.md  ascr_master_guide.md  benchmark_plan.md  changelog.md  cluster_notes.md  fair_4way_hard64_results.json  lumina_qwen_coarse_hard64_results.json  mmada_qwen_coarse_hard64_results.json  project_status.md  reproducibility.md  results_overview.md  server_setup.md  stage1_design.md  stage1_phase1_summary_20260519.md  stage2_cluster_execution.md  stage2_vlm_distilled_understanding.md
jobs/: bench3_eval_pipeline.sbatch  bench_bagel_gen_shard.sbatch  geneval_gen_shard.sbatch  geneval_merge_eval.sbatch  stage1_bagel_vs_showo_baseline_judge.sbatch  stage1_compare_gpu_shared.sbatch  stage1_compare_qwen36_gpu.sbatch  stage1_complex_qwen36_gpu.sbatch  stage1_drawbench_qwen35_9b_smoke8.sbatch  stage1_geneval_bagel_generate.sbatch  stage1_geneval_evaluate.sbatch  stage1_geneval_generate_8gpu.sbatch  stage1_geneval_score_single.sbatch  stage1_hard64_bagel_3way_judge.sbatch  stage1_hard64_bagel_3way_judge_sharded.sbatch  stage1_hard64_showo_ascr_swap_judge.sbatch  stage1_hard64_variant_gen_8gpu.sbatch  stage1_lumina_qwen_coarse_hard64_8gpu.sbatch  stage1_mmada_qwen_coarse_hard64_8gpu.sbatch  stage1_mmada_self_coarse_hard64_8gpu.sbatch  stage1_mmada_self_hard64_8gpu.sbatch  stage1_mmada_self_smoke.sbatch  stage1_qwen35_9b_parallel8.sbatch  stage1_qwen35_9b_smoke1gpu.sbatch  stage1_run_gpu.sbatch  stage1_showo_qwen_coarse_hard64_8gpu.sbatch  stage1_t2i_compbench_qwen35_9b_hard64_8gpu_reuse.sbatch  stage1_t2i_compbench_qwen35_9b_smoke1.sbatch  stage1_t2i_compbench_qwen35_9b_smoke8.sbatch  stage2_train_selector_gpu.sbatch
requirements/: base.txt  dev.txt  local_vlm.txt  lumina.txt  mmada.txt  qwen_vl.txt  showo_download.txt  showo_inference.txt
scripts/: activate_env.sh  aggregate_showo_ascr_suites.py  build_bench_image_map.py  build_geneval_3way_summary.py  convert_bagel_output_to_geneval.py  convert_showo_output_to_geneval.py  create_env.sh  download_detr_model.py  download_mmada_models.py  download_owlvit_model.py  download_qwen35_9b_snapshot.sh  download_qwen36_snapshot.sh  download_showo.sh  download_showo_models.py  eval_csv_vqa_gpt.py  eval_genai_gpt.py  evaluate_geneval_owlvit.py  judge_geneval_gpt.py  judge_hard64_clean_gemini.py  judge_hard64_pairwise_gpt.py  judge_showo_ascr_pairs_qwen.py  judge_showo_ascr_pairwise_qwen.py  judge_variants_gemini.py  merge_judge_shards.py  merge_mmada_self_manifests.py  pair_bagel_vs_hard64_run.py  pair_bagel_vs_showo_baseline.py  prepare_bench_data.py  prepare_drawbench_prompts.py  prepare_t2i_compbench_prompts.py  purge_empty_checkpoints.py  qwen_eval_server.py  rerun_bench3_gemini.sh  run_bagel_text2image.py  run_hard64_variant_gemini.sh  run_hard64_variant_sharded_reuse.sh  run_inference.sh  run_lumina_qwen_coarse_hard64.py  run_mmada_qwen_coarse_hard64.py  run_mmada_self_coarse_hard64.py  (+24 more)
tests/: test_api_probe.py  test_compare_arms.py  test_compare_showo_suite.py  test_direct_token_selector.py  test_grid_projection.py  test_local_vlm.py  test_loop_direct.py  test_loop_initial_state.py  test_loop_multi_insert.py  test_lumina_native_stage2.py  test_mmada_self_coarse_wiring.py  test_mmada_self_wiring.py  test_native_showo_helpers.py  test_ofox_vlm_schema.py  test_preflight.py  test_prompt_composer.py  test_qwen_vl_evaluator.py  test_qwen_vl_token_question.py  test_remote_eval_wiring.py  test_schema_parser.py  test_secret_safety.py  test_selector_benchmark.py  test_stage2_dataset_builder.py  test_stage2_training_replay.py  test_stage3_4_5_integration.py  test_stage3_selectors.py  test_stage3_self_corrupt.py  test_stage3_token_repair_dataset.py  test_stage4_ddp_compat.py  test_stage4_mmu_lora.py  test_stage4_repair.py  test_stage4_shell_scripts.py  test_student_localizer_pipeline.py  test_teacher_distill.py  test_token_grid_overlay.py  test_token_locality.py  test_vq_corruptor.py
(+453 files in other folders)
