[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ascr"
version = "0.1.0"
description = "Alternating Semantic-Confidence Revision research prototype"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "ASCR contributors"}]
dependencies = []

[project.optional-dependencies]
dev = []
local-vlm = ["pillow"]
qwen-vl = ["transformers>=4.57.0", "accelerate>=1.1.0", "qwen-vl-utils>=0.0.14", "safetensors>=0.4.5", "sentencepiece>=0.2.0"]
showo = []

[project.scripts]
ascr-stage1 = "ascr.cli.run_stage1:main"
ascr-stage1-direct = "ascr.cli.run_stage1_direct:main"
ascr-stage1-mmada-self = "ascr.cli.run_stage1_mmada_self:main"
ascr-stage1-mmada-self-coarse = "ascr.cli.run_stage1_mmada_self_coarse:main"
ascr-compare-stage1-variants = "ascr.cli.compare_stage1_variants:main"
ascr-compare-showo = "ascr.cli.compare_showo_ascr:main"

[tool.setuptools.packages.find]
include = ["ascr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
