[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ascr"
version = "0.1.0"
description = "Alternating Semantic-Confidence Revision research prototype"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "ASCR contributors"}]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["numpy>=1.24", "pillow>=10.0.0", "pytest>=7"]
local-vlm = ["numpy>=1.24", "pillow>=10.0.0"]
judge = ["openai>=1.50.0", "pillow>=10.0.0"]
qwen-vl = ["torch>=2.4", "torchvision>=0.19", "transformers>=4.57.0", "accelerate>=1.1.0", "qwen-vl-utils>=0.0.14", "safetensors>=0.4.5", "sentencepiece>=0.2.0", "pillow>=10.0.0", "av>=15.0.0"]
lumina = ["torch>=2.4", "torchvision>=0.19", "transformers==4.46.2", "diffusers>=0.30.0", "accelerate>=0.30.0", "peft>=0.13.0", "safetensors>=0.4.5", "sentencepiece>=0.2.0", "pillow>=10.0.0"]
mmada = ["torch>=2.4", "torchvision>=0.19", "transformers==4.46.2", "accelerate>=0.30.0", "safetensors>=0.4.5", "sentencepiece>=0.2.0", "pillow>=10.0.0"]
showo = ["torch==2.2.1", "torchvision==0.17.1", "transformers==4.41.1", "diffusers==0.30.1", "accelerate==0.21.0", "omegaconf==2.3.0", "einops==0.6.0", "safetensors==0.4.3", "pillow==10.3.0", "numpy==1.24.4"]

[project.scripts]
ascr-stage1 = "ascr.cli.run_stage1:main"
ascr-stage1-direct = "ascr.cli.run_stage1_direct:main"
ascr-stage1-mmada-self = "ascr.cli.run_stage1_mmada_self:main"
ascr-stage1-mmada-self-coarse = "ascr.cli.run_stage1_mmada_self_coarse:main"
ascr-preflight = "ascr.cli.preflight:main"
ascr-teacher-distill = "ascr.distill.teacher:main"
ascr-teacher-audit = "ascr.distill.audit:main"
ascr-teacher-export = "ascr.distill.export_dataset:main"
ascr-lumina-native-audit = "ascr.cli.lumina_native_audit:main"
ascr-lumina-native-json-probe = "ascr.cli.lumina_native_json_probe:main"
ascr-token-locality-probe = "ascr.cli.token_locality_probe:main"
ascr-stage3-locality-report = "ascr.cli.stage3_locality_report:main"
ascr-stage3-merge-probe-shards = "ascr.cli.stage3_merge_probe_shards:main"
ascr-stage3-self-corrupt-dataset = "ascr.cli.stage3_self_corrupt_dataset:main"
ascr-stage3-train-selectors = "ascr.cli.stage3_train_selectors:main"
ascr-stage4-hidden-state-probe = "ascr.cli.stage4_hidden_state_probe:main"
ascr-stage4-extract-hidden-features = "ascr.cli.stage4_extract_hidden_features:main"
ascr-stage4-train-repair-head = "ascr.cli.stage4_train_repair_head:main"
ascr-stage4-prepare-mmu-sft = "ascr.cli.stage4_prepare_mmu_sft:main"
ascr-stage4-mmu-localization-probe = "ascr.cli.stage4_mmu_localization_probe:main"
ascr-stage4-train-mmu-lora = "ascr.cli.stage4_train_mmu_lora:main"
ascr-stage4-compare-input-modes = "ascr.cli.stage4_compare_input_modes:main"
ascr-stage4-image-mmu-smoke = "ascr.cli.stage4_image_mmu_smoke:main"
ascr-stage4-summarize-curriculum = "ascr.cli.stage4_summarize_curriculum:main"
ascr-stage4-analyze-probe-failures = "ascr.cli.stage4_analyze_probe_failures:main"
ascr-stage4-build-run-registry = "ascr.cli.stage4_build_run_registry:main"
ascr-stage4-decide-next = "ascr.cli.stage4_decide_next:main"
ascr-stage4-probe-sweep = "ascr.cli.stage4_probe_sweep:main"
ascr-train-lumina-evaluator = "ascr.training.train_lumina_evaluator:main"
ascr-prepare-lumina-sft-data = "ascr.training.prepare_lumina_sft_data:main"
ascr-train-lumina-lora-smoke = "ascr.training.train_lumina_lora_smoke:main"
ascr-compare-stage1-variants = "ascr.cli.compare_stage1_variants:main"
# Legacy preserved Show-o comparison entrypoint; not the project mainline.
ascr-compare-showo = "ascr.cli.compare_showo_ascr:main"

[tool.setuptools.packages.find]
include = ["ascr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
